force-app/main/default/objects/Lead/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <label>Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annual_Revenue</valueSetName>
    </valueSet>
</CustomField>