force-app/main/default/objects/Lead/fields/Assigned_To_IS_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_IS_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned To IS Team</label>
    <type>Checkbox</type>
</CustomField>