force-app/main/default/objects/Lead/fields/Auto_Convert__c.field-meta.xml
<CustomField>
    <fullName>Auto_Convert__c</fullName>
    <description>To trigger auto conversion code</description>
    <label>Auto Convert?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>