force-app/main/default/objects/Lead/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU wise Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BU_Wise_Requirement</valueSetName>
    </valueSet>
</CustomField>