force-app/main/default/objects/Lead/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote Required for Budgeting</fullName>
            </value>
            <value>
                <fullName>Budget Not Defined</fullName>
            </value>
            <value>
                <fullName>Budget Defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>