force-app/main/default/objects/Lead/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>No Requirement</fullName>
            </value>
            <value>
                <fullName>Lost - Pricing</fullName>
            </value>
            <value>
                <fullName>Lost - Solution</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Wrongly created</fullName>
            </value>
            <value>
                <fullName>Won - Pricing</fullName>
            </value>
            <value>
                <fullName>Won - Solution</fullName>
            </value>
            <value>
                <fullName>Won - Speed RFP</fullName>
            </value>
            <value>
                <fullName>Won - POC Successful</fullName>
            </value>
            <value>
                <fullName>Won - Account Mapping</fullName>
            </value>
            <value>
                <fullName>Won - Early Entrant</fullName>
            </value>
            <value>
                <fullName>Won - Existing customer</fullName>
            </value>
            <value>
                <fullName>ROI Not Justified</fullName>
            </value>
            <value>
                <fullName>Late Entrant</fullName>
            </value>
            <value>
                <fullName>Project on hold</fullName>
            </value>
            <value>
                <fullName>Due to Location</fullName>
            </value>
            <value>
                <fullName>Product Features</fullName>
            </value>
            <value>
                <fullName>Technical Capabilities</fullName>
            </value>
            <value>
                <fullName>Non Eligibility - Finance</fullName>
            </value>
            <value>
                <fullName>Non Eligibility - Experience</fullName>
            </value>
            <value>
                <fullName>Non Eligibility - Technical</fullName>
            </value>
            <value>
                <fullName>Non Eligibility - Certification</fullName>
            </value>
            <value>
                <fullName>POC Successful</fullName>
            </value>
            <value>
                <fullName>POC Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>