force-app/main/default/objects/Lead/fields/Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped to Accounts to restrict Direct Accounts creation</description>
    <label>Converted Lead</label>
    <type>Checkbox</type>
</CustomField>