force-app/main/default/objects/Lead/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>