force-app/main/default/objects/Lead/fields/Customer_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relationship__c</fullName>
    <label>Customer Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>