force-app/main/default/objects/Lead/fields/CustomersInfrastructuresetup__c.field-meta.xml
<CustomField>
    <fullName>CustomersInfrastructuresetup__c</fullName>
    <label>Customer&apos;s Infrastructure set up</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inhouse however they have plan to Outsource</fullName>
            </value>
            <value>
                <fullName>Inhouse no plans however want to evaluate</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>