force-app/main/default/objects/Lead/fields/Database_Name__c.field-meta.xml
<CustomField>
    <fullName>Database_Name__c</fullName>
    <label>Database Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>