force-app/main/default/objects/Lead/fields/Distributor_Partner_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Partner_Name_1__c</fullName>
    <label>Distributor Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>