force-app/main/default/objects/Lead/fields/Distributor_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Partner_Name__c</fullName>
    <label>Distributor Partner Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3C IT SOLUTIONS &amp; TELECOMS INDIA PRIVATE LIMITED</fullName>
            </value>
            <value>
                <fullName>4Dcompass Infosolutions Private Limited</fullName>
            </value>
            <value>
                <fullName>64 Network Security Private Limited</fullName>
                <label>64 Network Security Private limited</label>
            </value>
            <value>
                <fullName>7Array Solutions Private Limited</fullName>
            </value>
            <value>
                <fullName>A2P2 Technologies</fullName>
            </value>
            <value>
                <fullName>A3A Infotech Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Aadhion Digital Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Aaptteknous</fullName>
            </value>
            <value>
                <fullName>Aaraventure Technologies</fullName>
            </value>
            <value>
                <fullName>Aarkay Techno Consultants P Ltd</fullName>
            </value>
            <value>
                <fullName>Abm Micro</fullName>
                <label>ABM Micro</label>
            </value>
            <value>
                <fullName>Accel It Services</fullName>
            </value>
            <value>
                <fullName>ACCUTECH TECHNOLOGIES PRIVATE LIMITED</fullName>
            </value>
            <value>
                <fullName>Accveil Solutions Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>ACP IT SOLUTIONS PRIVATE LIMITED</fullName>
            </value>
            <value>
                <fullName>Adroit Infoways</fullName>
            </value>
            <value>
                <fullName>Adtech Solutions</fullName>
            </value>
            <value>
                <fullName>Aforeserve</fullName>
            </value>
            <value>
                <fullName>Agility Technology Solutions</fullName>
            </value>
            <value>
                <fullName>Agray Infosolutions Private Limited</fullName>
            </value>
            <value>
                <fullName>Alchemist Softwares Pvt. Ltd.</fullName>
            </value>
            <value>
                <fullName>Alekas Solutions Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Allatone Solutions Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>ALLIANCE PRO IT PRIVATE LIMITED</fullName>
            </value>
            <value>
                <fullName>Alpha Network And Systems</fullName>
                <label>ALPHA NETWORK AND SYSTEMS</label>
            </value>
            <value>
                <fullName>Ampran Technologies Pvt. Ltd</fullName>
            </value>
            <value>
                <fullName>AMSYS INFOCOM PRIVATE LIMITED</fullName>
            </value>
            <value>
                <fullName>APEX INFOCOM TECHNOLOGY PRIVATE LIMITED</fullName>
            </value>
            <value>
                <fullName>Appmac Infotech</fullName>
                <label>AppMac InfoTech</label>
            </value>
            <value>
                <fullName>Appolo Computers Pvt Ltd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>