force-app/main/default/objects/Lead/fields/End_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Address__c</fullName>
    <label>End Customer Address</label>
    <type>TextArea</type>
</CustomField>