force-app/main/default/objects/Lead/fields/End_Customer_City__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_City__c</fullName>
    <label>End Customer City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>