force-app/main/default/objects/Lead/fields/Infrastructure_Details__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Details__c</fullName>
    <label>Infrastructure Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>