force-app/main/default/objects/Lead/fields/IS_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>IS_Team_Member__c</fullName>
    <label>IS Team Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>