force-app/main/default/objects/Lead/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <externalId>true</externalId>
    <label>Lead Id</label>
    <type>AutoNumber</type>
</CustomField>