force-app/main/default/objects/Lead/fields/Lead_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Lead_Remarks__c</fullName>
    <label>Lead Remarks</label>
    <type>TextArea</type>
</CustomField>