force-app/main/default/objects/Lead/fields/LeadIntent__c.field-meta.xml
<CustomField>
    <fullName>LeadIntent__c</fullName>
    <label>Lead Intent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technical Specification Defined</fullName>
            </value>
            <value>
                <fullName>Basic requirement given no tech specs defined</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>