force-app/main/default/objects/Lead/fields/LeadQualification__c.field-meta.xml
<CustomField>
    <fullName>LeadQualification__c</fullName>
    <formula>IF(  LeadScore__c  &gt;= 75, &apos;Qualified&apos;, &apos;Unqualified&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Qualification</label>
    <type>Text</type>
</CustomField>