force-app/main/default/objects/Lead/fields/Next_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Date__c</fullName>
    <label>Next Contact Date</label>
    <type>Date</type>
</CustomField>