force-app/main/default/objects/Lead/fields/OEM_Lead_Shared_By__c.field-meta.xml
<CustomField>
    <fullName>OEM_Lead_Shared_By__c</fullName>
    <label>OEM Lead Shared By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>