force-app/main/default/objects/Lead/fields/OnlineRegistered__c.field-meta.xml
<CustomField>
    <fullName>OnlineRegistered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Registered</label>
    <type>Checkbox</type>
</CustomField>