force-app/main/default/objects/Lead/fields/Partner_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used to indicate the Partner Sales Rep who has worked on this Lead</description>
    <label>Partner Sales Rep</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Partner_Primary__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Partner Sales Rep)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>