force-app/main/default/objects/Lead/fields/Partner_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Partner_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner - Secondary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Partner_Check__c</field>
            <operation>contains</operation>
            <valueField>$Source.SecondarySource__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Partner - Secondary)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>