force-app/main/default/objects/Lead/fields/Partner_Tertiary__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tertiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner - Tertiary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Partner_Check__c</field>
            <operation>contains</operation>
            <valueField>$Source.TertiarySource__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Partner - Tertiary)</relationshipLabel>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>